# bevy_nif

./: Cargo.toml  LICENSE  readme.md
bevy_nif/: Cargo.toml
bevy_nif/examples/: load_nif.rs  setup.rs
bevy_nif/examples/third_person_camera/: mod.rs  mouse.rs
bevy_nif/src/: attach_parts.rs  helper_funcs.rs  lib.rs  loader.rs  physics.rs  skeleton.rs  spawner.rs  spawning_ni_helpers.rs
bevy_nif/src/nif_animation/: animation_setup_system.rs  bevy_types.rs  intermediate_types.rs  mod.rs  parser_helpers.rs
examples/: load_nif.rs  setup.rs
libs/bytes_io/: Cargo.toml
libs/bytes_io/src/bytes_io/: load.rs  save.rs
libs/nif/: Cargo.toml  expanded.rs
libs/nif/src/: lib.rs  loader.rs  types.rs
libs/nif/src/types/: niavobject.rs  nibound.rs  nigeometrydata.rs  ninode.rs  niobjectnet.rs  nitrishapedata.rs
libs/nif/tests/: nif_integration.rs
libs/nif/tests/assets/: random_objects~1.nif
libs/nif_macros/: Cargo.toml
libs/nif_macros/src/: lib.rs
src/: lib.rs  main.rs  mod.rs  setup.rs  test
src/modular_characters/: mod.rs
src/nif/: animation.rs  animation2.rs  animation_helpers.rs  attach_parts.rs  error.rs  helper_funcs.rs  loader.rs  loader_helpers.rs  mod.rs  setup2.rs  skeleton.rs  spawner.rs  test
src/nif/parser/: animation.rs  base_parsers.rs  block_parsers.rs  effects_properties.rs  extra_data  extra_data.rs  helpers.rs  materials.rs  mod.rs  morph.rs  start.rs  texture.rs  triangles.rs
src/nif/types/: animation.rs  base.rs  effects.rs  extra_data.rs  geometry.rs  mod.rs  parsing.rs  properties.rs  scene.rs  test  textures.rs
src/nif_animation/: animation_setup_system.rs  bevy_types.rs  mod.rs  parser_helpers.rs  text_key_parser.rs
