[package]
name = "bevy_nif"
description = "A very basic loader for Bevy NIFs"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nif = { path = "../libs/nif" }
bitflags = "2.9.0"
bmp = "0.5.0"
byteorder = "1.5" # For reading binary data easily
serde = "1.0.219"
slotmap = "1.0.7"
bevy_rapier3d = "0.32.0"
bevy = {workspace = true}


[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = ["x11", "tonemapping_luts","dynamic_linking", "reflect_auto_register",] }
bevy-inspector-egui = "0.35.0"
bevy_rapier3d = "0.32.0"
