[package]
name = "bevy_nif"
description = "A basic loader for Bevy NIFs"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nif = { path = "../libs/nif" }
bitflags = "2.9.0"
bmp = "0.5.0"
byteorder = "1.5" 
serde = "1.0.219"
slotmap = "1.0.7"
bevy = {workspace = true}


[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = ["x11", "tonemapping_luts","dynamic_linking", "reflect_auto_register", "free_camera", "bevy_gizmos", "bevy_gizmos_render"] }
bevy-inspector-egui = "0.36.0"
bevy_rapier3d = "0.33.0"
